# Vulkan-Sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: gun.glb  tank.glb
assets/shaders/: animation.vert.glsl  environment.frag.glsl  environment.vert.glsl  model.frag.glsl  pbr.frag.glsl  pbr.vert.glsl  present.frag.glsl  present.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  vert.glsl  wireframe.frag.glsl  wireframe.vert.glsl
examples/animation/: CMakeLists.txt
examples/animation/src/: animation.cpp
examples/cubemap/: CMakeLists.txt
examples/cubemap/src/: cubemap.cpp
examples/gui/src/: gui.cpp
examples/khalid/: CMakeLists.txt
examples/khalid/src/: khalid.cpp
examples/model/src/: model.cpp
examples/multi_mesh/: CMakeLists.txt
examples/multi_mesh/src/: multi_mesh.cpp
examples/offscreen/: CMakeLists.txt
examples/offscreen/src/: offscreen.cpp
examples/pbr/src/: pbr.cpp
examples/triangle/src/: triangle.cpp
examples/wireframe/src/: wireframe.cpp
src/common/: CMakeLists.txt
src/common/include/: buffer.h  context.h  image.h  shader.h  swap_chain.h  texture_descriptor_set.h  utils.h
src/common/src/: buffer.cpp  context.cpp  mesh.cpp  model_importer.cpp  shader.cpp  swap_chain.cpp  texture_descriptor_set.cpp
src/model_viewer/: CMakeLists.txt
src/model_viewer/src/: model_viewer.cpp
src/tipu/: CMakeLists.txt
src/tipu/include/: animator.h  attachment.h  buffer.h  context.h  descriptor.h  image.h  mesh.h  model.h  pipeline.h  utils.h
src/tipu/src/: animator.cpp  attachment.cpp  buffer.cpp  context.cpp  descriptor.cpp  importer.cpp  model.cpp  pipeline.cpp  swap_chain.cpp
